# Machine-Learning-Project

./: .gitignore  README.md  main.py  pyproject.toml
docs/: project-a-insurance-cost-overview.md  project-b-breast-cancer-overview.md
notebooks/: medical-cost-prediction-histgradientboostingregressor.ipynb  medical-cost-prediction-random-forest.ipynb  medical-cost-prediction.ipynb  test.ipynb
